[gd_scene load_steps=14 format=3 uid="uid://btqd2sfvr2jeg"]

[ext_resource type="Script" path="res://Script/Setting/loading_screen.gd" id="1_qjqt2"]
[ext_resource type="FontFile" uid="uid://duf5igiw61a8u" path="res://Assets/Fronts/blood_crow/bloodcrowe.ttf" id="2_0b3mq"]
[ext_resource type="Texture2D" uid="uid://bkv1f17imtqd4" path="res://Assets/Icons/game_loading_forest.jpg" id="2_463pl"]
[ext_resource type="FontFile" uid="uid://b6v672xc1gqtt" path="res://Assets/Fronts/nightcore/Nightcore Demo.ttf" id="3_l6uq0"]
[ext_resource type="Shader" path="res://Assets/Shaders/BloodFill.gdshader" id="4_t70gy"]
[ext_resource type="FontFile" uid="uid://cdv3ahec8kpdg" path="res://Assets/Fronts/feast-of-flesh-bb/fofbb_reg.otf" id="5_qv2o1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fc6pj"]
shader = ExtResource("4_t70gy")
shader_parameter/bg_color = Color(0.101961, 0, 0, 1)
shader_parameter/uv_scale = 0.9
shader_parameter/percentage = 0.011
shader_parameter/speed = 1.0
shader_parameter/wave_1_speed = -0.5
shader_parameter/wave_2_speed = 0.5
shader_parameter/wave_1_freq = 1.2
shader_parameter/wave_2_freq = 1.0
shader_parameter/wave_1_amp = 0.008
shader_parameter/wave_2_amp = 0.005
shader_parameter/sun_dir = Vector3(-0.2, 0.4, 1)
shader_parameter/water_colour = Color(0.5, 0.1, 0.1, 1)
shader_parameter/foam_colour = Color(0.6, 0.1, 0.1, 1)
shader_parameter/sky_colour = Color(0.3, 0, 0, 1)
shader_parameter/specular_colour = Color(0.279745, 0, 0.0294031, 1)

[sub_resource type="Gradient" id="Gradient_24hgk"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.94902, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t3q8a"]
gradient = SubResource("Gradient_24hgk")
width = 1100
height = 20
fill_to = Vector2(1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dcvb6"]
gradient = SubResource("Gradient_24hgk")
width = 1100
height = 20
fill_to = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_0q1cy"]
resource_name = "Progress_bar"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["LOADING ", "LOADING .", "LOADING . .", "LOADING . . .", "LOADING . . . . "]
}

[sub_resource type="Animation" id="Animation_6b7rj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["LOADING "]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4n2ud"]
_data = {
"Progress_bar": SubResource("Animation_0q1cy"),
"RESET": SubResource("Animation_6b7rj")
}

[node name="middle_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qjqt2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_463pl")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.023
anchor_top = 0.682
anchor_right = 0.977
anchor_bottom = 0.943
offset_left = -0.496002
offset_top = 0.0639648
offset_right = 0.495972
offset_bottom = -0.0640259
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="TipsHeading" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_l6uq0")
theme_override_font_sizes/font_size = 45
text = "amvimnaiv"
horizontal_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="VBoxContainer"]
material = SubResource("ShaderMaterial_fc6pj")
layout_mode = 2
value = 100.0
texture_under = SubResource("GradientTexture2D_t3q8a")
texture_progress = SubResource("GradientTexture2D_dcvb6")

[node name="TipsLabels" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_qv2o1")
theme_override_font_sizes/font_size = 20
text = "aviuabvuba "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_4n2ud")
}
autoplay = "Progress_bar"

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.038
anchor_top = 0.046
anchor_right = 0.038
anchor_bottom = 0.046
offset_left = 0.223999
offset_top = 0.191998
offset_right = 537.224
offset_bottom = 60.192
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_0b3mq")
theme_override_font_sizes/font_size = 50
text = "LOADING "
